# stenograf

./: .gitignore  CLAUDE.md  PLAN-AEC.md  PLAN-CLEANUP.md  PLAN.md  README.md  hatch_build.py  install.ps1  install.sh  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
eval/: README.md  adjudicate.py  aec_rig.py  aec_score.py  backends.py  bias.py  bias_confidence.py  bias_data.py  bias_fluid.py  bias_score.py  bias_tts.py  common.py  der.py  diarize.py  extract.py  live.py  manifest.example.json  parity.py  rttm.py  scan_languages.py  score.py  transcribe.py
native/: README.md
native/helper/: Info.plist  build.sh  main.swift
native/spike/: Info.plist  build.sh  main.swift
native/stenodiar/: .gitignore  Cargo.toml  build.ps1  build.sh
native/stenodiar/src/: main.rs
src/stenograf/: __init__.py  __main__.py  aec.py  archive.py  audio.py  cli.py  config.py  control.py  doctor.py  glossary.py  lid.py  live.py  loaders.py  models.py  output.py  pipeline.py  profiles.py  recording.py  session.py  settings.py  shortcut.py  transcript.py  tui.py  vad.py  view.py
src/stenograf/asr/: __init__.py  base.py  biasing.py  parakeet.py  parakeet_onnx.py  providers.py  registry.py  tokens.py
src/stenograf/capture/: __init__.py  base.py  file.py  linux.py  macos.py  streaming.py  windows.py
src/stenograf/cli/: __init__.py  doctor_cmd.py  format.py  notes.py  profiles.py  run.py  settings_cmd.py  start.py  transcribe.py
src/stenograf/diarization/: __init__.py  base.py  sherpa.py  speakrs.py
src/stenograf/notes/: __init__.py  backend.py  command.py  export.py  generate.py  mlx.py  model.py  ollama.py  prompt.py
src/stenograf/ui/: __init__.py  _fps.py  app.py  doctor.py  flow.py  home.py  meeting.py  notes.py  settings.py  setup.py  transcribe.py  widgets.py
tests/: conftest.py  fake_parec.py  fake_stenocap.py  test_aec.py  test_archive.py  test_asr_parakeet.py  test_asr_parakeet_onnx.py  test_asr_providers.py  test_asr_registry.py  test_asr_tokens.py  test_audio.py  test_biasing.py  test_biasing_loops.py  test_build_hook.py  test_capture_file.py  test_capture_linux.py  test_capture_macos.py  test_capture_streaming.py  test_capture_windows.py  test_cli.py  test_cli_notes.py  test_config.py  test_control.py  test_diarization_sherpa.py  test_diarization_sherpa_unit.py  test_diarization_speakrs.py  test_doctor.py  test_echo_dedup.py  test_eval_bias.py  test_eval_der.py  test_glossary.py  test_lid.py  test_live.py  test_live_orchestration.py  test_meeting.py  test_models.py  test_notes_backends.py  test_notes_export.py  test_notes_generate.py  test_notes_model.py  (+12 more)
