[project]
name = "stenograf"
version = "0.1.0"
description = "Accuracy-first local meeting transcription for German and English. Audio never touches disk."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Daniel Weber", email = "danielusweber@gmail.com" }]
keywords = ["transcription", "meetings", "speech-to-text", "diarization", "local", "privacy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    # Silero VAD + speaker diarization (ONNX/CPU — works on every platform).
    # 1.13.x macOS wheels are broken: they link libonnxruntime dynamically
    # but don't bundle it (dlopen fails on import).
    "sherpa-onnx>=1.12.40,<1.13",
    # sherpa-onnx's dependency on -core (which carries libonnxruntime) is
    # declared inconsistently between its sdist and wheels; uv resolves from
    # the sdist and would omit it, so declare it ourselves.
    "sherpa-onnx-core>=1.12.40,<1.13",
    # Default ASR backend (PLAN.md Phase 0 verdict); MLX is Apple-Silicon-only.
    "parakeet-mlx>=0.5.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Live-caption TUI (stenograf.tui). Imported lazily, only when the TUI runs —
    # the plain stdout view (stenograf.view) stays textual-free.
    "textual>=8.2.8",
]

[project.urls]
Repository = "https://github.com/daniel-om-weber/stenograf"
Issues = "https://github.com/daniel-om-weber/stenograf/issues"

[project.scripts]
stenograf = "stenograf.cli:main"
steno = "stenograf.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
# Phase 0 model-evaluation harness (eval/) — not shipped with the package.
eval = [
    "jiwer>=3.1",
    "mlx-whisper>=0.4.3",
    "parakeet-mlx>=0.5.2",
    "mlx-voxtral>=0.0.4",
    # mlx-lm 0.31 crashes on import against transformers 5.x
    # (AutoTokenizer.register signature change); voxtral needs the 4.x line.
    "transformers>=4.55.2,<5",
]
# Canary-1B-v2 accuracy-ceiling reference via NeMo-on-MPS (slow, never shipped).
# Kept apart from `eval`: NeMo's pins don't coexist with the MLX stack.
eval-canary = [
    "nemo_toolkit[asr]>=2.4",
]

[tool.uv]
conflicts = [[{ group = "eval" }, { group = "eval-canary" }]]
# NeMo pulls packages (kaldialign) whose newest releases ship no macOS arm64
# wheel; force resolution to versions installable on this machine.
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
# NeMo pins kaldialign<=0.9.1, which has no cp313/macOS wheel; 0.12 does and
# the API (align/edit_distance) is unchanged.
override-dependencies = ["kaldialign>=0.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stenograf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
