[project]
name = "stenograf"
version = "0.1.0"
description = "Accuracy-first local meeting transcription for German and English. Audio never touches disk."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
# <3.14: the ASR chain (parakeet-mlx → librosa → numba) has no 3.14 support
# yet; without the cap `uv tool install` on a 3.14-default machine backtracks
# to ancient numba sdists and fails to build. The cap makes uv pick 3.12/3.13.
requires-python = ">=3.12,<3.14"
authors = [{ name = "Daniel Weber", email = "danielusweber@gmail.com" }]
keywords = ["transcription", "meetings", "speech-to-text", "diarization", "local", "privacy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    # Silero VAD + speaker diarization (ONNX/CPU — works on every platform).
    # 1.13.x macOS wheels are broken: they link libonnxruntime dynamically
    # but don't bundle it (dlopen fails on import).
    "sherpa-onnx>=1.12.40,<1.13",
    # sherpa-onnx's dependency on -core (which carries libonnxruntime) is
    # declared inconsistently between its sdist and wheels; uv resolves from
    # the sdist and would omit it, so declare it ourselves.
    "sherpa-onnx-core>=1.12.40,<1.13",
    # Default ASR backend (PLAN.md Phase 0 verdict); MLX is Apple-Silicon-only.
    "parakeet-mlx>=0.5.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Cross-platform ASR backend (Phase 5): the same Parakeet-TDT-v3, fp32 ONNX
    # on CPU. Decision A resolved to onnx-asr over sherpa's export on accuracy —
    # sherpa ships v3 only as int8, and int8 measurably degrades German (see
    # asr/parakeet_onnx.py). Unmarked: on macOS it is the parity reference the
    # eval harness compares MLX against. [cpu] pins onnxruntime, [hub] the
    # HuggingFace download path.
    "onnx-asr[cpu,hub]>=0.11",
    # In-process notes LLM (Stage D) — the zero-setup default backend on Apple
    # Silicon. Pinned to the 0.29 line (verified 2026-07-10): mlx-lm >=0.30
    # requires transformers>=5, but the current transformers 5.13 crashes
    # mlx-lm's import (AutoTokenizer.register signature) and mlx-voxtral (eval
    # group) needs the 4.x line — no consistent resolve exists. The cost of
    # 0.29 is that generation is bound to the thread that imported mlx_lm
    # ("no Stream(gpu, 0)" elsewhere; fixed upstream only in the 0.31 line) —
    # notes/mlx.py guards this at runtime. transformers cap: without it a
    # fresh resolve picks 5.x and mlx-lm 0.29 breaks at import.
    "mlx-lm>=0.29.1,<0.30; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "transformers>=4.55.2,<5; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Resolver guard, not a direct import: numba (via parakeet-mlx → librosa)
    # caps numpy (0.66: <2.5), and without a numba floor a fresh resolve keeps
    # the newest numpy and backtracks numba into ancient sdists that no longer
    # build. The floor makes the resolver downgrade numpy instead, and the
    # effective numpy cap tracks numba's own metadata as it advances.
    "numba>=0.60; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Windows live capture (Phase 6): WASAPI mic + loopback streams. Decision D
    # resolved to soundcard over pyaudiowpatch — one API for both channels, and
    # its AUTOCONVERTPCM init makes Windows resample server-side to 16 kHz
    # (parec-style, no Python resampler dep). See capture/windows.py.
    "soundcard>=0.4.4; sys_platform == 'win32'",
    # Live-caption TUI (stenograf.tui). Imported lazily, only when the TUI runs —
    # the plain stdout view (stenograf.view) stays textual-free.
    "textual>=8.2.8",
    "livekit>=1.1",
    # Bundled static ffmpeg (per-platform wheels), resolved via
    # imageio_ffmpeg.get_ffmpeg_exe(): `steno transcribe` decodes .mov/.m4a/…
    # with no system ffmpeg install, and every platform decodes with the same
    # ffmpeg build. IMAGEIO_FFMPEG_EXE overrides the binary if ever needed.
    "imageio-ffmpeg>=0.6",
]

[project.optional-dependencies]
# Reserved for the Stage D note-enhancement layer. The Ollama client will be
# stdlib-only, so the extra stays empty — naming it now keeps
# `stenograf[ollama]` a valid requirement before and after Stage D lands.
ollama = []

[project.urls]
Repository = "https://github.com/daniel-om-weber/stenograf"
Issues = "https://github.com/daniel-om-weber/stenograf/issues"

[project.scripts]
stenograf = "stenograf.cli:main"
steno = "stenograf.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    # tests/test_build_hook.py imports hatch_build.py (the wheel build hook),
    # which imports the build backend.
    "hatchling>=1.27",
    # eval/der.py + tests/test_eval_der.py (both in the default test suite) import
    # scipy. On macOS it resolves transitively via parakeet-mlx→librosa, but that
    # chain is macOS-arm64-only, so declare it here or `pytest` fails to collect the
    # DER scorer test on Linux/CI (Phase 3→4 readiness audit).
    "scipy>=1.11",
]
# Phase 0 model-evaluation harness (eval/) — not shipped with the package.
eval = [
    "jiwer>=3.1",
    "mlx-whisper>=0.4.3",
    "parakeet-mlx>=0.5.2",
    "mlx-voxtral>=0.0.4",
    "scipy>=1.11",
    # mlx-lm 0.31 crashes on import against transformers 5.x
    # (AutoTokenizer.register signature change); voxtral needs the 4.x line.
    "transformers>=4.55.2,<5",
    "speechmos>=0.0.1.1",
    "onnxruntime>=1.27.0",
]
# Canary-1B-v2 accuracy-ceiling reference via NeMo-on-MPS (slow, never shipped).
# Kept apart from `eval`: NeMo's pins don't coexist with the MLX stack.
eval-canary = [
    "nemo_toolkit[asr]>=2.4",
]

[tool.uv]
conflicts = [[{ group = "eval" }, { group = "eval-canary" }]]
# NeMo pulls packages (kaldialign) whose newest releases ship no macOS arm64
# wheel; force resolution to versions installable on this machine.
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
# NeMo pins kaldialign<=0.9.1, which has no cp313/macOS wheel; 0.12 does and
# the API (align/edit_distance) is unchanged.
override-dependencies = ["kaldialign>=0.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stenograf"]

# Bundles the compiled `stenocap` capture helper on macOS-arm64 and tags the
# wheel platform-specific; a no-op (pure py3-none-any wheel) everywhere else.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
