[package]
name = "stenodiar"
version = "0.1.0"
edition = "2021"
description = "Diarization helper: speakrs (pyannote community-1-class pipeline, VBx auto speaker count) behind a JSON CLI"
license = "MIT"
publish = false

[features]
# Acceleration is chosen at build time per platform: build.sh passes coreml on
# macOS; off-mac the default is ORT CPU, with cuda as the opt-in GPU path.
default = []
coreml = ["speakrs/coreml"]
cuda = ["speakrs/cuda"]

[dependencies]
speakrs = "0.5"

[profile.release]
lto = true

# Vendored speakrs 0.5.0 with two CPU-throughput patches (see vendor/VENDOR.md);
# drop this section once they land upstream.
[patch.crates-io]
speakrs = { path = "vendor/speakrs" }
